--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -4,9 +4,34 @@ cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 
 project(CMakeTutorial VERSION 1.0.0 LANGUAGES C)
 
-
 # External packages
+find_package(MPI REQUIRED)
 
 find_package(HDF5 COMPONENTS C HL REQUIRED)
 
+find_package(BLAS REQUIRED)
+
+configure_file(downloadFindFFTW.cmake.in findFFTW-download/CMakeLists.txt)
+execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+        RESULT_VARIABLE result
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/findFFTW-download )
+if(result)
+    message(FATAL_ERROR "CMake step for findFFTW failed: ${result}")
+    else()
+    message("CMake step for findFFTW completed (${result}).")
+endif()
+execute_process(COMMAND ${CMAKE_COMMAND} --build .
+        RESULT_VARIABLE result
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/findFFTW-download )
+if(result)
+    message(FATAL_ERROR "Build step for findFFTW failed: ${result}")
+endif()
+
+set(findFFTW_DIR ${CMAKE_CURRENT_BINARY_DIR}/findFFTW-src)
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${findFFTW_DIR}")
+
+find_package(FFTW REQUIRED)
+
 add_subdirectory(src)
+
