This working example and the documentation is really coming together

--- a/cmake/src/CMakeLists.txt
+++ b/cmake/src/CMakeLists.txt
@@ -2,13 +2,11 @@
 add_executable(make_hdf5_table example.c)
 include_directories(SYSTEM ${HDF5_INCLUDE_DIRS})
 include_directories(SYSTEM ${MPI_INCLUDE_DIRS})
-include_directories(SYSTEM ${BLAS_INCLUDE_DIRS})
-include_directories(SYSTEM ${FFTW_INCLUDE_DIRS})
+include_directories(SYSTEM ${GSL_INCLUDE_DIRS})
 
 target_link_libraries(make_hdf5_table ${HDF5_LIBRARIES})
 target_link_libraries(make_hdf5_table ${HDF5_HL_LIBRARIES})
-target_link_libraries(make_hdf5_table ${BLAS_LIBRARIES})
-target_link_libraries(make_hdf5_table ${FFTW_LIBRARIES})
+target_link_libraries(make_hdf5_table ${GSL_LIBRARIES})
 target_link_libraries(make_hdf5_table ${MPI_LIBRARIES} ${MPI_LINK_FLAGS})
 
 install(TARGETS make_hdf5_table DESTINATION bin)
