Adding singularity recipe example and example of submitting the container on Quest, changing the cmake example to produce an executable called example like every other build tool example does

--- a/cmake/src/CMakeLists.txt
+++ b/cmake/src/CMakeLists.txt
@@ -1,12 +1,12 @@
 # add the executable
-add_executable(make_hdf5_table example.c)
+add_executable(example example.c)
 include_directories(SYSTEM ${HDF5_INCLUDE_DIRS})
 include_directories(SYSTEM ${MPI_INCLUDE_DIRS})
 include_directories(SYSTEM ${GSL_INCLUDE_DIRS})
 
-target_link_libraries(make_hdf5_table ${HDF5_LIBRARIES})
-target_link_libraries(make_hdf5_table ${HDF5_HL_LIBRARIES})
-target_link_libraries(make_hdf5_table ${GSL_LIBRARIES})
-target_link_libraries(make_hdf5_table ${MPI_LIBRARIES} ${MPI_LINK_FLAGS})
+target_link_libraries(example ${HDF5_LIBRARIES})
+target_link_libraries(example ${HDF5_HL_LIBRARIES})
+target_link_libraries(example ${GSL_LIBRARIES})
+target_link_libraries(example ${MPI_LIBRARIES} ${MPI_LINK_FLAGS})
 
-install(TARGETS make_hdf5_table DESTINATION bin)
+install(TARGETS example DESTINATION bin)
